k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-staging
  template:
    metadata:
      labels:
        app: nginx-staging
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
