k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-staging-service
spec:
  selector:
    app: nginx-staging
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
